--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.npmrc
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -18,6 +19,7 @@ mono_crash.*
 
 # Build results
 [Dd]ebug/
+[Dd]ist/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
