--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start:dev": "concurrently \"cd client && npm run dev\" \"cd server && npm run server\"",
-    "start": "npm run build && node ./server/server.js",
-    "server": "node ./server/server.js",
+    "start": "npm run build && cd server && node server.js",
+    "server": "cd server && node server.js",
     "build": "cd client && npm run build",
     "install": "cd server && npm i && cd ../client && npm i",
     "client": "cd client && npm start"
